# rag_mcp

./: .gitignore  =0.23.0  =0.42.0  DEV_SPEC.md  README.md  main.py  pyproject.toml
.claude/skills/auto-coder/: .spec_hash
config/: settings.yaml  stopwords.txt
config/prompts/: chunk_refinement.txt  image_captioning.txt  rerank.txt
scripts/: __init__.py  ingest.py  query.py  view_sqlite.py
src/: __init__.py
src/core/: __init__.py  settings.py  types.py
src/core/query_engine/: __init__.py  dense_retriever.py  fusion.py  hybrid_search.py  query_processor.py  reranker.py  sparse_retriever.py
src/core/response/: __init__.py  citation_generator.py  multimodal_assembler.py  response_builder.py
src/core/trace/: __init__.py  trace_context.py
src/ingestion/: __init__.py  pipeline.py
src/ingestion/chunking/: __init__.py  document_chunker.py
src/ingestion/embedding/: __init__.py  batch_processor.py  dense_encoder.py  sparse_encoder.py
src/ingestion/storage/: __init__.py  bm25_indexer.py  image_storage.py  vector_upserter.py
src/ingestion/transform/: __init__.py  base_transform.py  chunk_refiner.py  image_captioner.py  metadata_enricher.py
src/libs/: __init__.py
src/libs/embedding/: __init__.py  base_embedding.py  dashscope_embedding.py  embedding_factory.py  litellm_embedding.py  openai_embedding.py
src/libs/evaluator/: __init__.py  base_evaluator.py  custom_evaluator.py  evaluator_factory.py  ragas_evaluator.py
src/libs/llm/: __init__.py  anthropic_llm.py  anthropic_vision_llm.py  base_llm.py  base_vision_llm.py  dashscope_llm.py  dashscope_vision_llm.py  litellm_llm.py  llm_factory.py  openai_llm.py  openai_vision_llm.py
src/libs/loader/: __init__.py  base_loader.py  file_integrity.py  pdf_loader.py
src/libs/reranker/: __init__.py  base_reranker.py  (+3 more)
src/mcp_server/: __init__.py  protocol_handler.py  server.py
src/observability/: __init__.py  logger.py
tests/: __init__.py
tests/e2e/: __init__.py  test_data_ingestion.py
tests/fixtures/: __init__.py  noisy_chunks.json
tests/integration/: __init__.py  test_chunk_refiner_llm.py  test_hybrid_search.py  test_ingestion_pipeline.py  test_mcp_server.py
tests/unit/: __init__.py  test_batch_processor.py  test_bm25_indexer_roundtrip.py  test_chunk_refiner.py  test_config_loading.py  test_core_types.py  test_dense_encoder.py  test_dense_retriever.py  test_document_chunker.py  test_embedding_factory.py  test_evaluator_factory.py  test_file_integrity.py  test_fusion_rrf.py  test_get_document_summary.py  test_image_captioner_fallback.py  test_image_storage.py  test_list_collections.py  test_llm_factory.py  test_loader_pdf_contract.py  test_metadata_enricher_contract.py  test_multimodal_assembler.py  test_protocol_handler.py  test_query_processor.py  test_reranker_factory.py  test_reranker_fallback.py  test_response_builder.py  test_smoke_imports.py  test_sparse_encoder.py  test_sparse_retriever.py  test_splitter_factory.py  test_vector_store_factory.py  test_vector_upserter_idempotency.py
(+23 files in other folders)
