[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-knowledge-hub"
version = "0.1.0"
description = "A modular RAG-based knowledge retrieval system with MCP protocol support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["rag", "mcp", "knowledge-base", "retrieval", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "chromadb>=0.5.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "rank-bm25>=0.2.2",
    "streamlit>=1.35.0",
    "pillow>=10.0.0",
    "markitdown>=0.0.1a3",
    "langchain>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "litellm>=1.60.0",
    "jieba>=0.42.0",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
eval = [
    "ragas>=0.1.0",
    "deepeval>=0.21.0",
]

[project.scripts]
rag-mcp = "mcp_server.server:main"
ingest = "scripts.ingest:main"
query = "scripts.query:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (with real dependencies)",
    "e2e: End-to-end tests (full workflow)",
    "slow: Slow tests",
]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.venv
  | venv
  | \.git
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # Line too long (handled by black)
]
exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    ".venv",
    "venv",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
